trying to fix "pics not showing" bug

--- a/utilities/styles.scss
+++ b/utilities/styles.scss
@@ -201,7 +201,7 @@ opacity: 95%;
 .form-row button:hover {
 background-color: black;
 color: $secondary-background;
-box-shadow: 3px 5px 5px $own-color;
+box-shadow: 3px 5px 10px $own-color;
 transition: 0.15;
 }
 
